[build-system]
build-backend = "cmeel"
requires = ["cmeel[build]"]

[project]
description = "cmeel distribution for TinyXML-2"
license = "Zlib"
name = "cmeel-tinyxml2"
requires-python = ">= 3.8"
version = "9.0.0"

[project.urls]
homepage = "https://github.com/cmake-wheel/cmeel-tinyxml2"
repository = "https://github.com/cmake-wheel/cmeel-tinyxml2.git"

[tool.cmeel]
build-number = 13
has-sitelib = false
source = "tinyxml2"

[tool.tomlsort]
all = true
